--- a/templates/select.html
+++ b/templates/select.html
@@ -4,10 +4,11 @@
 
 {% block content %}
 <div class="container">
-    <h1 class="heading">Select Movie</h1>
+  <h1 class="heading">Select Movie</h1>
+  {% for movie in results: %}
   <p>
-    <a href="#"> MOVIE TITLE - MOVIE RELEASE DATE</a>
+  <a href="#"> {{ movie.title }} - {{ movie.release_date }}</a>
   </p>
-
+  {% endfor %}
 </div>
 {% endblock %}
